objects/Exam__c.object
<CustomObject>
    <fields>
        <fullName>Authorization_ID__c</fullName>
        <label>Authorization ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Account is not a Client.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exams</relationshipLabel>
        <relationshipName>Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exam_Name__c</fullName>
        <label>Exam Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Series_Code__c</fullName>
        <label>Exam Series Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTS_Exam_ID__c</fullName>
        <externalId>true</externalId>
        <label>VTS Exam ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Exam</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exam - {00000}</displayFormat>
        <label>Exam ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>